Color space update.

--- a/carnd/vehicles.yaml
+++ b/carnd/vehicles.yaml
@@ -1,9 +1,10 @@
+bspace: YUV
 cell_per_block: 2
 cspace: YUV
 hchannel: 0
-hist_bins: 32
+hist_bins: 16
 hist_range: !!python/tuple [0, 256]
 hspace: YUV
 orient: 12
 pix_per_cell: 8
-spatial_size: !!python/tuple [32, 32]
+spatial_size: !!python/tuple [16, 16]
